--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 .banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(/images/desktop/image-hero.jpg);
+    url(./images/desktop/image-hero.jpg);
   height: 90vh;
   background-size: cover;
   background-position: center;
