--- a/mobile.css
+++ b/mobile.css
@@ -8,6 +8,8 @@
   .banner-box h1 {
     font-size: 30px;
   }
+  .vr-container{
+    align-items:baseline;
   .vr-content h2{
     font-size: 30px;
   }
